argo/networkpolicy-argocd-notifications-controller.yaml
# Source: argocd
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: argocd-notifications-controller
  namespace: argo
  labels:
    app.kubernetes.io/name: argocd-notifications-controller
    app.kubernetes.io/instance: argocd
    app.kubernetes.io/component: notifications-controller
    app.kubernetes.io/part-of: argocd
    app.kubernetes.io/version: v3.5.2
  annotations:
    noa.re/manifest-id: a55ea777d9554140
spec:
  ingress:
  - from:
    - namespaceSelector: {}
    ports:
    - port: metrics
  podSelector:
    matchLabels:
      app.kubernetes.io/name: argocd-notifications-controller
      app.kubernetes.io/instance: argocd
  policyTypes:
  - Ingress
